Fragment for index page

--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -324,4 +324,6 @@
     <color name="white">#FFFFFF</color>
     <!-- White -->
 
+    <color name="grey_translucent">#78BDBDBD</color>
+
 </resources>
