--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -24,13 +24,15 @@
             android:visibility="gone"/>
 
         <TextView
+            android:id="@+id/loginText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Login"
+            android:text="@string/login"
             android:layout_gravity="bottom"
             android:layout_margin="@dimen/margin_large"
             android:textColor="@color/white"/>
         <ImageView
+            android:id="@+id/loginIcon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
