--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,10 +6,10 @@
     </style>
 
     <!-- Default application theme. -->
-    <style name="BlueAndPink" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="BlueAndPink" parent="@style/Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/blue_500</item>
         <item name="colorPrimaryDark">@color/blue_700</item>
-        <item name="colorAccent">@color/amber_500</item>
+        <item name="colorAccent">@color/grey_500</item>
     </style>
 
     <!-- Setting theme. -->
@@ -38,6 +38,7 @@
         <item name="android:foreground">?android:attr/selectableItemBackground</item>
 
     </style>
+
 
 
 
