--- a/app/src/main/res/layout/fragment_index.xml
+++ b/app/src/main/res/layout/fragment_index.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context="io.b1ackr0se.vsociety.fragment.ForumFragment">
+    tools:context="io.b1ackr0se.vsociety.fragment.IndexFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
